# sealedstellar

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  SEALEDSTELLAR_BUILD_PLAN.md
.claude/: CLAUDE.md  REFERENCE_SECURITY_AUDIT.md  SKILL_GENERAL.md
circuits/: auction_winner.circom  package-lock.json  package.json
circuits/lib/: commitment.circom  merkle.circom
circuits/scripts/: compile.sh  export-vk.sh  make-contract-fixture.js  make-demo-input.js  prove.sh  setup.sh
circuits/test/: auction_winner.test.js  helpers.js
contracts/: Cargo.toml
contracts/auction/: Cargo.toml
contracts/auction/src/: lib.rs  test.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  test.rs
contracts/whitelist-registry/: Cargo.toml
contracts/whitelist-registry/src/: lib.rs
docs/: AUDIT_DAYS_8_9.md  DECISIONS.md  MOCKS.md
faucet/: package-lock.json  package.json
faucet/src/: api.ts  chain.ts  config.ts  main.ts  mint.ts  result.ts
indexer/: .env.example  package-lock.json  package.json  tsconfig.json
indexer/src/: api.ts  chain.ts  config.ts  ingest.ts  main.ts  result.ts  store.ts  types.ts
prover/: build-input.js  build-operator-session.js  build-settle-bundle.js  build-whitelist.js  fetch-bid-events.js  format-args.js  make-bid.js  operator-decrypt.js  operator-keygen.js  package-lock.json  package.json
scripts/: e2e.sh  stage-demo-auction.sh
web/: eslint.config.js  index.html  package-lock.json  package.json
web/api/: faucet.ts  reveal.ts  settle.ts
web/scripts/: copy-circuit.mjs  shoot-faucet.mjs  shoot-screenshots.mjs
web/src/: App.tsx  config.ts  index.css  main.tsx  polyfills.ts  vite-env.d.ts
web/src/components/auction/: AuctionCard.tsx  AuctionFilterChips.tsx  AuctionHistoryRow.tsx  AuctionRow.tsx  AuctionSpotlightCard.tsx  AuctionsEmptyState.tsx  AuctionsListBody.tsx  AuctionsNoMatches.tsx  AuctionsSkeleton.tsx  AuctionsToolbar.tsx  BidErrorNotice.tsx  BidSlotGrid.tsx  CountdownClock.tsx  EmptySlot.tsx  GlassSegmentedControl.tsx  ListHero.tsx  OperatorStepper.tsx  PerspectiveSwitch.tsx  PlaceBidDialog.tsx  RefundedNotice.tsx  RoomHeader.tsx  RoomSkeleton.tsx  RpcDownNotice.tsx  SealLockIcon.tsx  SealMedallion.tsx  SealedBidCard.tsx  SealingSteps.tsx  SettlementSummary.tsx  SlotPips.tsx  SlotTicks.tsx  StatusPill.tsx  TokenPickerDialog.tsx  VerifiedStamp.tsx  WaxSeal.tsx  WhitelistEditorDialog.tsx  WinnerFlipCard.tsx
web/src/components/layout/: AmbientField.tsx  AppShell.tsx  FaucetButton.tsx  WalletButton.tsx  WalletProvider.tsx
web/src/components/ui/: button.tsx
web/src/hooks/: useAuctionRoom.ts  useAuctionsList.ts  useAuctionsListView.ts  useAuctionsQuery.ts  useDebouncedValue.ts  useNowSeconds.ts  usePolledChainResource.ts  useSettlementInfo.ts  useWallet.ts
web/src/lib/: auctions-list-view.ts  autosettle.ts  chain.ts  crypto.ts  demo-whitelist.ts  errors.ts  faucet.ts  format.ts  indexer.ts  operator.ts  reveal.ts  rpc.ts  transactions.ts  utils.ts  wallet-assets.ts  wallet-context.ts  wallet-kit.ts  whitelist-tree.ts
web/src/routes/: AuctionRoomRoute.tsx  AuctionsRoute.tsx  CreateAuctionRoute.tsx  SpecimenRoute.tsx
web/src/types/: circomlibjs.d.ts  snarkjs.d.ts
